# wf-engine

./: .gitignore  AGENTIC_SYSTEM.md  ARCHITECTURE.md  CLI_GUIDE.md  LLM_MCP_INTEGRATION.md  NODE_GENERATOR.md  NODE_GENERATOR_IMPLEMENTATION.md  README.md  USAGE_GUIDE.md  agentic_integration.py  claude_config.json  demo_agent.py  demo_node_generator.py  environments.json  function_workflow_engine.py  function_workflow_engine_original.py.bak  inference_engine.py  mcp_server.py  performance_history.json  pyproject.toml  setup_wfe_command.ps1  start_mcp.py  start_mcp_server.bat  wf.bat  wf.py  wfe.bat  wfe.psm1  wfe.py  workflow_agent.py  workflow_agent_llm.py  workflow_builder.py  workflow_data_session.py  workflow_decorator.py  workflow_environment_manager.py
archive/: README.md  demo_llm_mcp.py  test_new_node.py
docs/: WORKFLOW_CREATION_GUIDE.md
src/: __init__.py
utilities/: logging_config.py  shared_memory_utils.py
videos/: README.md
workflow_nodes/: __init__.py  batch_inference_node.py  cpu_inference_node.py  cuda_inference_node.py  custom_node_template.py  detect_gpus_node.py  directml_inference_node.py  load_cuda_model_node.py  load_directml_model_node.py  load_openvino_model_node.py  npu_inference_node.py  performance_stats_node.py  realtime_video_detection_node.py  visualize_detections_node.py
workflows/: agent_atomic_image.json  agent_atomic_video.json  auto_generated_detection.json  cuda_test.json  generated_workflow.json  granular_cpu_inference.json  granular_directml_inference.json  granular_parallel_inference.json  granular_video_detection.json  (+10 more)
(+99 files in other folders)
